Fix graph x-label spacing with lots of parameters

--- a/style.css
+++ b/style.css
@@ -92,4 +92,5 @@ canvas {
 .flex-container {
   display: flex;
   justify-content: left;
+  align-items: flex-start;
 }
